--- a/UserInterface/login.html
+++ b/UserInterface/login.html
@@ -83,7 +83,7 @@
                 </div>
             </div>
 
-            <button class="positive ui button">Submit</button>
+            <a href="welcome.html"><button class="positive ui button">signUp</button></a>
             <br><br>
             <p>Already Have an Account?</p>
             <p id="login">Login</p>
@@ -100,7 +100,7 @@
                 <div class="field">
                     <label>Password</label>
                     <input type="text" placeholder="Password">
-                    <button class="positive ui button">Submit</button>
+                    <a href="welcome.html"><button class="positive ui button">Login</button></a>
                     <center>
                         <hr>OR
                         <hr>
