--- a/UserInterface/login.html
+++ b/UserInterface/login.html
@@ -16,7 +16,7 @@
         content='446700921151-rmegka4s2bi42ahdvuu6hb1ppv78ma9b.apps.googleusercontent.com'>
     <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 
-    <title>Document</title>
+    <title>User</title>
 </head>
 
 <body style="background-image: url('bg.jpg')">
