--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css">
     <title>Document</title>
 </head>
-<body style="background-image: url('UserInterface/bg.jpg')">
+<body style="background-image: url('UserInterface/bg.jpg');background-size: cover;">
    <center> <header>Go Eco</header>
-    <a href="/UserInterface/login.html"<button class="ui button primary">User Interface</button></a>
-    <a href="/adminInterface/loginAdmin.html"<button class="ui teal button">Admin Interface</button></a></center>
+    <a href="UserInterface/login.html"<button class="ui button primary">User Interface</button></a>
+    <a href="adminInterface/loginAdmin.html"<button class="ui teal button">Admin Interface</button></a></center>
 </body>
 </html>
